<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignupActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/green_a080"
        app:layout_constraintBottom_toTopOf="@id/signup_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <Button
            android:id="@+id/signup_bar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:drawableStart="@mipmap/back"
            android:drawablePadding="5dp"
            android:text="@string/sign_up"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/grey_cc"
        app:layout_constraintBottom_toTopOf="@id/signup_bottom"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_bar"
        app:layout_constraintVertical_weight="4">

        <EditText
            android:id="@+id/signup_account"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="50dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:background="@drawable/circle_rectangle_stroke_green"
            android:digits="@string/abc_123"
            android:hint="@string/account"
            android:inputType="text"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/signup_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/signup_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="5dp"
            android:autofillHints=""
            android:background="@drawable/circle_rectangle_stroke_green"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/signup_password_confirm"
            app:layout_constraintEnd_toEndOf="@id/signup_account"
            app:layout_constraintStart_toStartOf="@id/signup_account"
            app:layout_constraintTop_toBottomOf="@id/signup_account" />

        <EditText
            android:id="@+id/signup_password_confirm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="10dp"
            android:autofillHints=""
            android:background="@drawable/circle_rectangle_stroke_green"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:padding="10dp"
            app:layout_constraintBottom_toTopOf="@id/signup_btn_signup"
            app:layout_constraintEnd_toEndOf="@id/signup_password"
            app:layout_constraintStart_toStartOf="@id/signup_password"
            app:layout_constraintTop_toBottomOf="@id/signup_password" />

        <Button
            android:id="@+id/signup_btn_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="80dp"
            android:layout_marginEnd="80dp"
            android:background="@drawable/circle_rectangle_solid_white"
            android:text="@string/signup"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/signup_btn_agree"
            app:layout_constraintEnd_toEndOf="@id/signup_password_confirm"
            app:layout_constraintStart_toStartOf="@id/signup_password_confirm"
            app:layout_constraintTop_toBottomOf="@id/signup_password_confirm" />

        <CheckBox
            android:id="@+id/signup_btn_agree"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="50dp"
            android:layout_marginTop="5dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/agree_text"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/signup_agree_protocol"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/signup_btn_signup" />

        <TextView
            android:id="@+id/signup_agree_protocol"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="50dp"
            android:ellipsize="end"
            android:singleLine="true"
            android:text="@string/protocol_link"
            app:layout_constraintBottom_toBottomOf="@id/signup_btn_agree"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/signup_btn_agree"
            app:layout_constraintTop_toTopOf="@id/signup_btn_agree" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/signup_bottom"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/grey_cc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/signup_main"
        app:layout_constraintVertical_weight="4">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android:text="@string/copyright"
            android:textColor="@color/grey_88"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>