<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/green_008d58"
        app:layout_constraintBottom_toTopOf="@id/create_main"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_weight="1">

        <Button
            android:id="@+id/create_bar_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:drawableStart="@mipmap/back"
            android:drawablePadding="5dp"
            android:padding="10dp"
            android:text="@string/create_account"
            android:textColor="@color/black"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/create_bar_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:src="@mipmap/create"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/create_bar_rand_pwd"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/create_bar_rand_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:src="@mipmap/rand"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/create_bar_sort"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/create_bar_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/todo"
            android:padding="10dp"
            android:src="@mipmap/sort"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/create_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/grey_cc"
        app:layout_constraintBottom_toTopOf="@id/create_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_bar"
        app:layout_constraintVertical_weight="8">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp">

                <TextView
                    android:id="@+id/create_main_tv_account_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/account_name"
                    android:textColor="@color/grey_33"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/create_main_et_account_name"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/create_main_et_account_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/account_name"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/create_main_tv_account_name" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp">

                <TextView
                    android:id="@+id/create_main_tv_account"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/account"
                    android:textColor="@color/grey_33"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/create_main_et_account"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/create_main_et_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/account"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/create_main_tv_account" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="30dp">

                <TextView
                    android:id="@+id/create_main_tv_password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:text="@string/password"
                    android:textColor="@color/grey_33"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toTopOf="@id/create_main_et_password"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/create_main_et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:autofillHints=""
                    android:hint="@string/password"
                    android:inputType="text"
                    android:padding="10dp"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/create_main_tv_password"
                    tools:ignore="TextFields" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </LinearLayout>
    </ScrollView>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/create_save"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:background="@color/grey_cc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/create_main"
        app:layout_constraintVertical_weight="1">

        <Button
            android:id="@+id/create_save_btn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="10dp"
            android:background="@drawable/circle_rectangle_solid_green"
            android:text="@string/save"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>